# ChangeLog for www-client/pybugz
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/ChangeLog,v 1.37 2009/04/11 00:39:12 williamh Exp $

*pybugz-0.7.4_rc2 (11 Apr 2009)

  11 Apr 2009; William Hubbs <williamh@gentoo.org> +pybugz-0.7.4_rc2.ebuild:
  Version bump.

*pybugz-0.7.4_rc1-r1 (09 Apr 2009)

  09 Apr 2009; William Hubbs <williamh@gentoo.org> -pybugz-0.7.4_rc1.ebuild,
  +pybugz-0.7.4_rc1-r1.ebuild:
  Rev bump for bug #265580.

*pybugz-0.7.4_rc1 (28 Mar 2009)

  28 Mar 2009; William Hubbs <williamh@gentoo.org> metadata.xml,
  pybugz-0.7.3.ebuild, +pybugz-0.7.4_rc1.ebuild:
  Version bump.

  10 Aug 2008; <ricmm@gentoo.org> pybugz-0.7.3.ebuild:
  Add ~mips, bug #226043

  11 Jul 2008; Jeroen Roovers <jer@gentoo.org> pybugz-0.7.3.ebuild:
  Stable for HPPA (bug #231233).

  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> pybugz-0.7.3.ebuild:
  Marked ~hppa too.

  06 Feb 2008; nixnut <nixnut@gentoo.org> pybugz-0.7.3.ebuild:
  stable on ppc wrt bug #208533

  06 Feb 2008; Raúl Porcel <armin76@gentoo.org> pybugz-0.7.3.ebuild:
  sparc stable wrt #208533

  02 Feb 2008; Brent Baude <ranger@gentoo.org> pybugz-0.7.3.ebuild:
  Marking pybugz-0.7.3 ppc64 for bug 208533

  02 Feb 2008; Christian Faulhammer <opfer@gentoo.org> pybugz-0.7.3.ebuild:
  stable x86/amd64, bug 208533

  05 Jan 2008; William Hubbs <williamh@gentoo.org> pybugz-0.7.3.ebuild:
  Make sure that python is built with readline support -- closes #204272.

  04 Jan 2008; Markus Ullmann <jokey@gentoo.org> pybugz-0.7.3.ebuild:
  arm keyword for bug 203717

*pybugz-0.7.3 (30 Dec 2007)

  30 Dec 2007; William Hubbs <williamh@gentoo.org> -pybugz-0.7.2.ebuild,
  +pybugz-0.7.3.ebuild:
  Version bump and removed old version.

*pybugz-0.7.2 (28 Dec 2007)

  28 Dec 2007; William Hubbs <williamh@gentoo.org> -pybugz-0.7.0.ebuild,
  -pybugz-0.7.1.ebuild, +pybugz-0.7.2.ebuild:
  Version bump and removed old versions.

*pybugz-0.7.1 (07 Oct 2007)
