@@ -1,9 +1,7 @@
 AUX pybugz-0.7.1-prefix.patch 317 RMD160 a701863821efec55adc450a5bc01a52ad521b739 SHA1 8c9a3495b13b2c2d7e594fe2dd802abed99870d8 SHA256 b84d849578ac2adbd55ac454c8f855e15a61f93404bca47e418f63b2a15153de
 DIST pybugz-0.7.3.tar.gz 18285 RMD160 55d68bdcec74bc03b14ba760ab042e9f6a81a7b3 SHA1 7107f90103c0e28ee8f66b032c78dfc91e25554c SHA256 9294472b23f5b678d54dce06ce37718495890890c93a75d359519a8cdf8a42b2
-DIST pybugz-0.7.4_rc1.tar.gz 34148 RMD160 9359817bf6aae493e63786c2dd2c72c1fa7b5f52 SHA1 9f283432dc0d50d89b672d33718ab4e12e867939 SHA256 e790d7c9a3e09d2907b932d2fc6a8117e297b47bc4958aaac1fd7eb25bd4e329
-DIST pybugz-0.7.4_rc2.tar.gz 35849 RMD160 6c1d9a0db40537daaf0ac6d7ce5968af36a5258e SHA1 56e2ca21e1704ff93c88b4f2f0e85c59bd4869e8 SHA256 c51e252dfff82a78c394e99b68fcea85a660e66b4ca76b287c89a1631a24e2a1
+DIST pybugz-0.7.4_rc3.tar.gz 36175 RMD160 df8a285ec044d3a4cd1ce7ada9b46e933b347702 SHA1 7bc6229701fd58f40487aeae2bd38fc92606c290 SHA256 7715807ba707a7e3984f7abb43ddc7d429f7d176b2c1f6ed8b01960441e1c47f
 EBUILD pybugz-0.7.3.ebuild 1047 RMD160 3d53f6a8d38c1f5cd91f67cec4ca056fcce04a0b SHA1 86c035a48c1835375e8cdacc6d3abd9a0d61ffc8 SHA256 c5233fd19c476b75444f12143f3af3e4ef1209b71c297a6f5e6b02ac24cf0912
-EBUILD pybugz-0.7.4_rc1.ebuild 927 RMD160 b45cde4e78dd2f6f5a453abba32766573f71a6c2 SHA1 41d06ddd40055ba2414d0630146407bfeacb0459 SHA256 3e4b55afb91ff40eab7d1e1b4379dc95f57dcf34cb7944ce9ada020f6cb57d02
-EBUILD pybugz-0.7.4_rc2.ebuild 912 RMD160 f00b8229448010dfb797935bee248bb212accbcd SHA1 a1acded1afd3eef5d86406c0b500ddd928454b02 SHA256 3c8707db97b26e011b9d1da85e06851f3e28d5973d7cda629a25649556352efe
-MISC ChangeLog 5452 RMD160 e56c6d9cc35e74ee0bc204be41bf093a93fa0ba5 SHA1 967894a0fd0984ccca88c8baa929d1ef9318d4cf SHA256 e38366e499f24a2cdd51d9901be1f36b64a0153de3cd2331ab9e2a8e59b84d74
+EBUILD pybugz-0.7.4_rc3.ebuild 912 RMD160 d787ac9a303650744414fe5f95ef1240828f4282 SHA1 e91a2af8f50407cc81a536615e4f87897e3f00a1 SHA256 e3baf203a89a95dfe8d93743456880493e710dbbeea5337866e686b82faa3707
+MISC ChangeLog 5672 RMD160 e845bbe06f370fa0dfa9ab5265255f85cea27185 SHA1 2fe3fa5eb911171cd6991eeea0606b841c72525a SHA256 71b22ab3a1f42f2c7978454c834b89944397b37c74c96d5e374399994d9a8132
 MISC metadata.xml 313 RMD160 ae9b5f8b2001ff7c64fdcea75f635280fadbe358 SHA1 9d283e83ad7276f683037b15c4ba5471c493187b SHA256 eaf7334f46aa74eb7ee0f46374f1bb286cb0c66690d4018ed43e5f5e3aca952d
