@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/pybugz-0.7.4_rc2.ebuild,v 1.1 2009/04/11 00:39:12 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/pybugz-0.7.4_rc3.ebuild,v 1.1 2009/04/12 03:13:34 williamh Exp $
 
 EAPI=2
 
