@@ -1,6 +1,13 @@
 # ChangeLog for www-client/pybugz
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/ChangeLog,v 1.37 2009/04/11 00:39:12 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/ChangeLog,v 1.38 2009/04/12 03:13:34 williamh Exp $
+
+*pybugz-0.7.4_rc3 (12 Apr 2009)
+
+  12 Apr 2009; William Hubbs <williamh@gentoo.org>
+  -pybugz-0.7.4_rc1-r1.ebuild, -pybugz-0.7.4_rc2.ebuild,
+  +pybugz-0.7.4_rc3.ebuild:
+  Version bump and remove old release candidates.
 
 *pybugz-0.7.4_rc2 (11 Apr 2009)
 
